<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.t246osslab.easybuggy</groupId>
  <artifactId>easybuggy</artifactId>
  <version>1-SNAPSHOT</version>
  <packaging>war</packaging>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jetty-version>8.2.0.v20160908</jetty-version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>3.0.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>jstl</artifactId>
      <version>1.2</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-jsp</artifactId>
      <version>${jetty-version}</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-webapp</artifactId>
      <version>${jetty-version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-annotations</artifactId>
      <version>${jetty-version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.derby</groupId>
      <artifactId>derby</artifactId>
      <version>10.8.3.0</version>
    </dependency>
    <dependency>
      <groupId>org.tinylog</groupId>
      <artifactId>tinylog</artifactId>
      <version>1.1</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/javassist/javassist -->
    <dependency>
      <groupId>javassist</groupId>
      <artifactId>javassist</artifactId>
      <version>3.12.1.GA</version>
    </dependency>
    <dependency>
      <groupId>org.openjdk.jol</groupId>
      <artifactId>jol-core</artifactId>
      <version>0.6</version>
    </dependency>
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>5.1.17</version>
    </dependency>
  </dependencies>
  <build>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>2.3.2</version>
          <configuration>
            <source>1.6</source>
            <target>1.6</target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>1.1.1</version>
          <executions>
            <execution>
              <id>enforce-java</id>
              <goals>
                <goal>enforce</goal>
              </goals>
              <configuration>
                <rules>
                  <requireMavenVersion>
                    <version>[3.0.0,)</version>
                  </requireMavenVersion>
                  <requireJavaVersion>
                    <version>[1.6,)</version>
                    <message>[ERROR] OLD JDK [${java.version}] in use.
                    Jetty ${jetty-version} requires JDK 1.6 or later</message>
                  </requireJavaVersion>
                </rules>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <executions>
           <execution>
              <id>create-empty-directory-and-english-properties</id>
              <phase>process-classes</phase>
              <goals>
                <goal>run</goal>
              </goals>
              <configuration>
                <tasks>
                  <mkdir dir="logs" />
                  <copy file="${basedir}/src/main/resources/messages_en.properties" tofile="${project.build.outputDirectory}/messages.properties" />
                  <copy file="${basedir}/src/main/resources/indexpage_en.properties" tofile="${project.build.outputDirectory}/indexpage.properties" />
                </tasks>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>1.2</version>
          <configuration>
            <classpathScope>test</classpathScope>
            <executable>java</executable>
            <arguments>
              <argument>-Xmx256m</argument>
              <argument>-XX:MaxPermSize=32m</argument>
              <argument>-XX:MaxDirectMemorySize=90m</argument>
              <argument>-XX:+UseSerialGC</argument>
              <argument>-Xloggc:logs/gc.log</argument>
              <argument>-XX:+PrintHeapAtGC</argument>
              <argument>-XX:+PrintGCDetails</argument>
              <argument>-XX:+PrintGCDateStamps</argument>
              <argument>-XX:+UseGCLogFileRotation</argument>
              <argument>-XX:NumberOfGCLogFiles=5</argument>
              <argument>-XX:GCLogFileSize=10M</argument>
              <argument>-XX:GCTimeLimit=15</argument>
              <argument>-XX:GCHeapFreeLimit=50</argument>
              <argument>-XX:+HeapDumpOnOutOfMemoryError</argument>
              <argument>-XX:HeapDumpPath=logs/</argument>
              <argument>-XX:ErrorFile=logs/hs_err_pid%p.log</argument>
              <argument>-XX:NativeMemoryTracking=summary</argument>
              <!-- <argument>-XX:+UnlockCommercialFeatures</argument>
              <argument>-XX:+FlightRecorder</argument> -->
              <argument>-agentlib:jdwp=transport=dt_socket,server=y,address=9009,suspend=n</argument>
              <argument>-Dderby.stream.error.file=logs/derby.log</argument>
              <argument>-Dderby.infolog.append=true</argument>
              <argument>-Dderby.language.logStatementText=true</argument>
              <argument>-Dderby.locks.deadlockTrace=true</argument>
              <argument>-Dderby.locks.monitor=true</argument>
              <argument>-Dderby.storage.rowLocking=true</argument>
              <argument>-Dcom.sun.management.jmxremote</argument>
              <argument>-Dcom.sun.management.jmxremote.port=7900</argument>
              <argument>-Dcom.sun.management.jmxremote.ssl=false</argument>
              <argument>-Dcom.sun.management.jmxremote.authenticate=false</argument>
              <argument>-cp</argument>
              <classpath />
              <argument>org.t246osslab.easybuggy.EmbeddedJettyServer</argument>
              <argument>8989</argument>
            </arguments>
          </configuration>
        </plugin>
      </plugins>
  </build>
</project>
